# netgame

./: Cargo.toml
src/: client.rs  content.rs  main.rs  protocol.rs  server.rs  shared.rs  works.rs
src/client/: chat.rs  input.rs  menu.rs  network.rs  oneshot.rs  predicted.rs  render.rs
src/client/menu/: button.rs  textbox.rs
src/content/: map.rs
src/protocol/: component.rs  input.rs  message.rs
src/server/: chat.rs  network.rs  oneshot.rs  spawn.rs
src/shared/: casting.rs  enemy.rs  map.rs  player.rs  projectile.rs
src/works/: player.rs
