[package]
name = "netgame"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dependencies]
avian3d = "0.2.1"
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_replicon = { version = "0.31.1", default-features = false, features = ["parent_sync", "scene"]}
bevy_replicon_renet = "0.8.0"
serde = "1.0.219"


[features]
default = ["client", "server"]
client = ["bevy_replicon/client"]
server = ["bevy_replicon/server"]
